Add no_ssl_verification and other fixes
